# VisionDetective

./: .gitignore  AGENTS.md  Cargo.toml  README.md  demo-level.drawio  game-progress.toml  index.html
assets/config/: card-presets.json  character-presets.toml  game-static-config.toml  terrain-presets.json
assets/scene/: inprogress_scene.toml  scene-demo-01.toml
doc/: wiki.md
src/: asset.rs  camera_control.rs  config.rs  game_view.rs  input.rs  main.rs  obstacle.rs  picking.rs  progress.rs
src/card/: card_params.rs  mod.rs  obstacle.rs
src/card/specialized/: clue.rs  interactive.rs  mod.rs  obstacle.rs  scenery.rs  trap.rs
src/card/specialized/interactive/: dialogue.rs  hello_world.rs
src/coin/: character.rs  player.rs
src/config/: card_config.rs  character_config.rs  terrain_config.rs
src/editor/: mod.rs
src/physics/: area.rs  mod.rs  obstacle.rs  vision.rs
src/scene/: mod.rs  terrain.rs
src/scene/demo_level/: mod.rs
src/tools/: mod.rs
tools/: Cargo.toml  build-web.ps1
tools/src/: main.rs
