[package]
name = "VisionDetective"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d", "default_font", "debug", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
rfd = "0.15"
serde_json = "1.0.149"
typetag = "0.2.21"
inventory = "0.3.24"
anyhow = "1.0.102"
geo = "0.33.1"
