[package]
name = "VisionDetective"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d", "default_font", "debug", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
rfd = "0.15"
serde_json = "1.0.149"
inventory = "0.3.24"
anyhow = "1.0.102"
geo = "0.33.1"
uuid = { version = "1.23.1", features = ["v4"] }
fast_poisson = "1.0.2"

#[profile.dev]
#opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
profile-tracy = [
    "bevy/trace_tracy",
    "bevy/debug",
]

profile-tracy-memory = [
    "bevy/trace_tracy_memory",
    "bevy/debug",
]
